# components/tenant-api/docs/swagger.json
@@ -47,7 +47,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handler.PutFederationPolicyRequest"
+                            "$ref": "#/definitions/internal_handler_federation.PutFederationPolicyRequest"
                         }
                     }
                 ],
@@ -112,7 +112,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/internal_handler.FederationTokenRecord"
+                                "$ref": "#/definitions/internal_handler_federation.FederationTokenRecord"
                             }
                         }
                     },
@@ -164,7 +164,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handler.CreateFederationTokenRequest"
+                            "$ref": "#/definitions/internal_handler_federation.CreateFederationTokenRequest"
                         }
                     }
                 ],
@@ -172,7 +172,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/internal_handler.CreateFederationTokenResponse"
+                            "$ref": "#/definitions/internal_handler_federation.CreateFederationTokenResponse"
                         }
                     },
                     "400": {
@@ -1486,34 +1486,6 @@
                 }
             }
         },
-        "internal_handler.CreateFederationTokenRequest": {
-            "type": "object",
-            "required": [
-                "tenant_id"
-            ],
-            "properties": {
-                "description": {
-                    "type": "string",
-                    "maxLength": 256
-                },
-                "tenant_id": {
-                    "type": "string",
-                    "maxLength": 128,
-                    "minLength": 1
-                }
-            }
-        },
-        "internal_handler.CreateFederationTokenResponse": {
-            "type": "object",
-            "properties": {
-                "record": {
-                    "$ref": "#/definitions/internal_handler.FederationTokenRecord"
-                },
-                "token": {
-                    "type": "string"
-                }
-            }
-        },
         "internal_handler.DiffRequest": {
             "type": "object",
             "properties": {
@@ -1533,29 +1505,6 @@
                     "type": "boolean"
                 },
                 "tenant_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "internal_handler.FederationTokenRecord": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "expires_at": {
-                    "type": "string"
-                },
-                "issued_at": {
-                    "type": "string"
-                },
-                "issued_by": {
-                    "type": "string"
-                },
-                "tenant_id": {
-                    "type": "string"
-                },
-                "token_id": {
                     "type": "string"
                 }
             }
@@ -1678,23 +1627,6 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/github_com_vencil_tenant-api_internal_platform.PRInfo"
-                    }
-                }
-            }
-        },
-        "internal_handler.PutFederationPolicyRequest": {
-            "type": "object",
-            "properties": {
-                "force": {
-                    "type": "boolean"
-                },
-                "reason": {
-                    "type": "string"
-                },
-                "whitelist": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/github_com_vencil_tenant-api_internal_federation_fedpolicy.WhitelistEntry"
                     }
                 }
             }
@@ -1883,6 +1815,74 @@
                 },
                 "label": {
                     "type": "string"
+                }
+            }
+        },
+        "internal_handler_federation.CreateFederationTokenRequest": {
+            "type": "object",
+            "required": [
+                "tenant_id"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "maxLength": 256
+                },
+                "tenant_id": {
+                    "type": "string",
+                    "maxLength": 128,
+                    "minLength": 1
+                }
+            }
+        },
+        "internal_handler_federation.CreateFederationTokenResponse": {
+            "type": "object",
+            "properties": {
+                "record": {
+                    "$ref": "#/definitions/internal_handler_federation.FederationTokenRecord"
+                },
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_handler_federation.FederationTokenRecord": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "expires_at": {
+                    "type": "string"
+                },
+                "issued_at": {
+                    "type": "string"
+                },
+                "issued_by": {
+                    "type": "string"
+                },
+                "tenant_id": {
+                    "type": "string"
+                },
+                "token_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_handler_federation.PutFederationPolicyRequest": {
+            "type": "object",
+            "properties": {
+                "force": {
+                    "type": "boolean"
+                },
+                "reason": {
+                    "type": "string"
+                },
+                "whitelist": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_vencil_tenant-api_internal_federation_fedpolicy.WhitelistEntry"
+                    }
                 }
             }
         }
